# plugin-share

./: Cargo.toml  LICENSE  README.md  api-iife.js  build.rs  package.json  rollup.config.base.js  rollup.config.js
.github/workflows/: release.yml  test.yml  tests.yml
android/: .gitignore  build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Example.kt  ExamplePlugin.kt  SharePlugin.kt
android/src/main/res/xml/: provider_paths.xml
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: SharePlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: can_share.toml  cleanup.toml  share_data.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  state.rs
src/platform/: focus.rs  linux.rs  macos.rs  mod.rs  windows.rs
