[package]
name = "tauri-plugin-vnidrop-share"
version = "0.0.1"
description = "A Tauri plugin for sharing content via the system's share dialog."
license = "MIT"
authors = [ "Abass Hammed", "Vnidrop" ]
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
repository = "https://github.com/vnidrop/plugin-share"
links = "tauri-plugin-vnidrop-share"

[dependencies]
tauri = { version = "2" }
serde = "1.0"
thiserror = "2"
tempfile = "3.20.0"
log = "0.4.27"
base64 = "0.22.1"
uuid = {version = "1.17.0", features = ["v4"]}
raw-window-handle = "0.6.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.1"
objc2 = "0.6.1"
objc2-foundation = "0.3.1"

[target.'cfg(windows)'.dependencies]
windows-collections = "0.2.0"
windows-core = "0.61.2"
windows = {version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_System_WinRT",
  "ApplicationModel_DataTransfer",
  "Foundation_Collections",
  "Foundation_Metadata",
  "Foundation",
  "Storage",
  "Storage_Streams"
]}

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
